fix whitespace

--- a/public/stillalive.css
+++ b/public/stillalive.css
@@ -94,7 +94,7 @@ a {
     display: block;
     position: absolute;
     left: 38em;
-    top: 31.5em;
+    top: 29.5em;
     font-size: 14px;
 }
 
